add button to remove vote

--- a/decidim-budgets/app/packs/stylesheets/budgets.scss
+++ b/decidim-budgets/app/packs/stylesheets/budgets.scss
@@ -30,6 +30,10 @@
       @apply font-semibold;
     }
 
+    &__content__header--description{
+      @apply text-sm;
+    }
+
     &__progressbar{
       @apply my-4 relative;
 
