Make use of append_stylesheet_pack_tag

--- a/decidim-conferences/app/views/decidim/conferences/registration_types/index.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/registration_types/index.html.erb
@@ -10,10 +10,7 @@ edit_link(
 %>
 
 <%= append_javascript_pack_tag "decidim_conferences" %>
-
-<% content_for :css_content do %>
-  <%= stylesheet_pack_tag "decidim_conferences", media: "all" %>
-<% end %>
+<%= append_stylesheet_pack_tag "decidim_conferences" %>
 
 <%# NOTE: this page does not use a regular layout %>
 <main class="container">
