--- a/decidim-elections/app/views/decidim/elections/trustee_zone/trustees/show.html.erb
+++ b/decidim-elections/app/views/decidim/elections/trustee_zone/trustees/show.html.erb
@@ -1,5 +1,3 @@
-<%= stylesheet_pack_tag "decidim_elections_trustee_zone", media: "all" %>
-
 <div id="not_supported_browser" class="callout alert">
   <p><strong><%= t(".not_supported_browser_title") %></strong></p>
   <p><%= t(".not_supported_browser_description") %></p>
@@ -101,3 +99,4 @@
 </div>
 
 <%= append_javascript_pack_tag "decidim_elections_trustee_trustee_zone" %>
+<%= append_stylesheet_pack_tag "decidim_elections_trustee_zone" %>
