--- a/decidim-templates/app/views/decidim/templates/admin/questionnaire_templates/_choose.html.erb
+++ b/decidim-templates/app/views/decidim/templates/admin/questionnaire_templates/_choose.html.erb
@@ -42,4 +42,4 @@
 </div>
 
 <%= append_javascript_pack_tag "decidim_templates" %>
-<%= stylesheet_pack_tag "decidim_templates", media: "all" %>
+<%= append_stylesheet_pack_tag "decidim_templates" %>
