--- a/decidim-accountability/app/views/decidim/accountability/results/home.html.erb
+++ b/decidim-accountability/app/views/decidim/accountability/results/home.html.erb
@@ -1,8 +1,5 @@
 <%= append_javascript_pack_tag "decidim_accountability" %>
-
-<% content_for :css_content do %>
-  <%= stylesheet_pack_tag "decidim_accountability", media: "all" %>
-<% end %>
+<%= append_stylesheet_pack_tag "decidim_accountability" %>
 
 <% content_for :aside do %>
   <h1 class="h3 md:h1 decorator"><%= component_name %></h1>
