--- a/decidim-accountability/app/views/decidim/accountability/results/show.html.erb
+++ b/decidim-accountability/app/views/decidim/accountability/results/show.html.erb
@@ -14,10 +14,7 @@ edit_link(
 %>
 
 <%= append_javascript_pack_tag "decidim_accountability" %>
-
-<% content_for :css_content do %>
-  <%= stylesheet_pack_tag "decidim_accountability", media: "all" %>
-<% end %>
+<%= append_stylesheet_pack_tag "decidim_accountability" %>
 
 <%# REDESIGN_PENDING: this content must go inside the drawer, now the displayed result is kinda odd %>
 <%= render partial: "project", locals: { result: result } %>
