--- a/decidim-elections/app/views/decidim/elections/trustee_zone/elections/show.html.erb
+++ b/decidim-elections/app/views/decidim/elections/trustee_zone/elections/show.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_pack_tag "decidim_elections_trustee_zone", media: "all" %>
+<%= append_stylesheet_pack_tag "decidim_elections_trustee_zone" %>
 
 <% if current_step %>
   <div class="trustee-step"
