--- a/decidim-elections/app/views/decidim/votings/admin/monitoring_committee_election_results/show.html.erb
+++ b/decidim-elections/app/views/decidim/votings/admin/monitoring_committee_election_results/show.html.erb
@@ -21,4 +21,4 @@
   <% end %>
 <% end %>
 
-<%= stylesheet_pack_tag "decidim_votings_admin_votings", media: "all" %>
+<%= append_stylesheet_pack_tag "decidim_votings_admin_votings" %>
