--- a/decidim-forms/app/views/decidim/forms/questionnaires/show.html.erb
+++ b/decidim-forms/app/views/decidim/forms/questionnaires/show.html.erb
@@ -3,10 +3,7 @@
   description: translated_attribute(questionnaire.description),
 }) %>
 
-<% content_for :css_content do %>
-  <%= stylesheet_pack_tag "decidim_forms", media: "all" %>
-<% end %>
-
+<%= append_stylesheet_pack_tag "decidim_forms" %>
 <%= append_javascript_pack_tag "decidim_forms" %>
 
 <%= render layout: "layouts/decidim/shared/layout_center" do %>
