--- a/decidim-comments/app/cells/decidim/comments/comments/add_comment.erb
+++ b/decidim-comments/app/cells/decidim/comments/comments/add_comment.erb
@@ -1,22 +1,20 @@
 <div class="add-comment">
   <% if user_signed_in? %>
     <% if alignment_enabled? %>
-      <% #REDESIGN PENDING: add design for aligment %>
       <div class="opinion-toggle button-group comment__opinion-container">
-        <span class="show-for-sr py-1.5"><%= t("decidim.components.add_comment_form.opinion.label") %></span>
+        <span class="py-1.5"><%= t("decidim.components.add_comment_form.opinion.label") %></span>
         <button aria-pressed="false" class="button button__sm button__text-secondary opinion-toggle--ok" data-selected-label="<%= t("decidim.components.add_comment_form.opinion.positive_selected") %>">
           <%= icon "thumb-up-line" %>
           <%= icon "thumb-up-fill" %>
-          <span class="show-for-sr"><%= t("decidim.components.add_comment_form.opinion.positive") %></span>
+          <span class="sr-only"><%= t("decidim.components.add_comment_form.opinion.positive") %></span>
         </button>
         <button aria-pressed="true" class="button button__sm button__text-secondary opinion-toggle--meh is-active" data-selected-label="<%= t("decidim.components.add_comment_form.opinion.neutral_selected") %>">
-          <span class="show-for-sr"><%= t("decidim.components.add_comment_form.opinion.neutral") %>
-          </span>
+          <span><%= t("decidim.components.add_comment_form.opinion.neutral") %></span>
         </button>
         <button aria-pressed="false" class="button button__sm button__text-secondary opinion-toggle--ko" data-selected-label="<%= t("decidim.components.add_comment_form.opinion.negative_selected") %>">
           <%= icon "thumb-down-line" %>
           <%= icon "thumb-down-fill" %>
-          <span class="show-for-sr"><%= t("decidim.components.add_comment_form.opinion.negative") %></span>
+          <span class="sr-only"><%= t("decidim.components.add_comment_form.opinion.negative") %></span>
         </button>
         <div role="alert" aria-live="assertive" aria-atomic="true" class="selected-state sr-only"></div>
       </div>
