move all tailwind classes to scss file

--- a/decidim-core/app/cells/decidim/redesigned_author/profile_inline.erb
+++ b/decidim-core/app/cells/decidim/redesigned_author/profile_inline.erb
@@ -1,4 +1,4 @@
-<span class="rounded-full overflow-hidden inline-block w-6 h-6">
+<span class="author__avatar-container">
   <%= render :avatar_image %>
 </span>
 
