--- a/decidim-core/app/cells/decidim/redesigned_author/compact.erb
+++ b/decidim-core/app/cells/decidim/redesigned_author/compact.erb
@@ -1,9 +1,9 @@
 <% if profile_path? %>
-  <%= link_to profile_path, class: "flex items-center gap-2" do %>
+  <%= link_to profile_path, class: "author__container" do %>
     <%= render :profile_inline_compact %>
   <% end %>
 <% else %>
-  <div class="flex items-center gap-2">
+  <div class="author__container">
     <%= render :profile_inline_compact %>
   </div>
 <% end %>
