--- a/decidim-budgets/app/packs/stylesheets/budgets.scss
+++ b/decidim-budgets/app/packs/stylesheets/budgets.scss
@@ -78,7 +78,7 @@
   }
 
   &__card__list-project{
-    @apply ml-auto rounded px-3 md:px-6 py-4 bg-background font-bold text-gray-2 text-xl w-[50%] min-w-[120px] grid grid-cols-2 place-items-center;
+    @apply ml-auto rounded px-3 md:px-6 py-2 bg-background font-bold text-gray-2 text-xl w-[50%] min-w-[120px] grid grid-cols-2 place-items-center;
   }
 
   &__card__highlight-vote{
@@ -110,6 +110,10 @@
 
     .card__list{
       @apply pr-0;
+    }
+
+    .card__link{
+      @apply mb-2 block;
     }
   }
 }
