--- a/decidim-budgets/app/views/decidim/budgets/projects/show.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/show.html.erb
@@ -56,18 +56,16 @@ edit_link(
     <%= resource_reference(project) %>
   </div>
   <% content_for :aside do %>
-    <%= cell("decidim/budgets/project_votes_count", project, layout: :one_line, class: "display-block") %>
-
-    <% if voting_finished? %>
-      <%= cell("decidim/budgets/project_voted_hint", project, class: "display-block") %>
-    <% elsif voting_open? %>
+    <% if voting_open? %>
       <%= render partial: "project_budget_button", locals: { project: project } %>
     <% end %>
 
     <span class="budget__definition-data__title">
       <%= t("budget", scope: "decidim.budgets.projects.show") %>
     </span>
-    <div class="budget__definition-data__number"><%= budget_to_currency project.budget_amount %></div>
+    <div class="budget__definition-data__number">
+      <%= budget_to_currency project.budget_amount %>
+    </div>
     <div class="grid grid-cols-2">
       <%= render partial: "decidim/shared/follow_button", locals: { followable: project, large: false  } %>
       <%= cell "decidim/share_button", nil %>
