--- a/decidim-budgets/app/cells/decidim/budgets/budget_list_item/vote_action.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/budget_list_item/vote_action.erb
@@ -7,7 +7,7 @@
       ) do %>
       <%= icon "delete-bin-line", class: "inline-block align-middle text-gray fill-current" %>
       <span class="inline-block align-middle underline text-alert">
-        <%= t(:remove_vote, scope: i18n_scope) %>
+        <span><%= t("cancel_order", scope: "decidim.budgets.projects.budget_summary") %></span>
       </span>
   <% end %>
 <% end %>
