--- a/decidim-budgets/app/cells/decidim/budgets/budget_list_item/show.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/budget_list_item/show.erb
@@ -19,7 +19,9 @@
 
   <div class="budget__card__highlight-vote">
     <div class="h3 text-gray-2">
-    <span><%= t("decidim.budgets.admin.models.budget.name") %></span>
+    <span>
+      <%= t("name", scope: "decidim.budgets.admin.models.budget") %>
+    </span>
       <strong>
         <%= budget_to_currency(total_budget) %>
       </strong>
