--- a/decidim-budgets/app/cells/decidim/budgets/budgets_list/show.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/budgets_list/show.erb
@@ -11,7 +11,7 @@
 <% if !voting_finished? && voted? %>
   <div class="section">
     <h2 class="h5 md:h3 decorator mb-8">
-      <%= t(:voted_budgets, scope: i18n_scope) %>
+      <%= t("voted_budgets", scope: "decidim.budgets.budgets_list") %>
     </h2>
 
     <%= render :voted %>
