remove margin-bottom card__hightlight

--- a/decidim-budgets/app/packs/stylesheets/budgets.scss
+++ b/decidim-budgets/app/packs/stylesheets/budgets.scss
@@ -126,6 +126,7 @@
   @apply col-span-12;
 }
 
-#budgets.card__highlight-container{
+#budgets.card__highlight-container,
+#budgets-to-vote.card__highlight-container{
   @apply mb-0;
 }
