--- a/decidim-core/app/cells/decidim/redesigned_author/name.erb
+++ b/decidim-core/app/cells/decidim/redesigned_author/name.erb
@@ -1,1 +1,7 @@
-<span><%= display_name %></span>
+<% if try(:disable_tooltip) %>
+  <span><%= display_name %></span>
+<% else %>
+  <%= with_tooltip render(:profile_minicard) do %>
+    <span><%= display_name %></span>
+  <% end %>
+<% end %>
