Avoid recursive loop in profile minicard

--- a/decidim-core/app/cells/decidim/redesigned_author/compact.erb
+++ b/decidim-core/app/cells/decidim/redesigned_author/compact.erb
@@ -1,6 +1,6 @@
 <% if profile_path? %>
   <%= link_to profile_path, class: "author__container" do %>
-    <%= render :profile_inline_compact %>
+    <%= profile_inline_compact %>
   <% end %>
 <% else %>
   <div class="author__container">
