overwrite modal defaults

--- a/decidim-core/app/cells/decidim/tos_page/refuse_btn_modal.erb
+++ b/decidim-core/app/cells/decidim/tos_page/refuse_btn_modal.erb
@@ -2,7 +2,7 @@
   <%= t("refuse.modal_button", scope: "decidim.pages.terms_and_conditions") %>
 </button>
 
-<%= decidim_modal id: "tos-refuse-modal" do %>
+<%= decidim_modal id: "tos-refuse-modal", class: "tos-refuse" do %>
   <div data-dialog-container>
     <%= icon "file-list-3-line" %>
     <h3 id="dialog-title-tos-refuse-modal" data-dialog-title>
