--- a/decidim-budgets/app/views/decidim/budgets/projects/_redesigned_exit_modal.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/_redesigned_exit_modal.html.erb
@@ -2,7 +2,7 @@
   <%= decidim_modal id: "exit-notification" do %>
     <div data-dialog-container>
       <h3 class="h3" id="dialog-title-exit-notification" tabindex="-1" data-dialog-title>
-        <%= current_order.projects_rule? ? t("title", scope: "decidim.budgets.projects.budget_excess.projects_excess") : t("title", scope: "decidim.budgets.projects.budget_excess.budget_excess") %>
+        <%= t("title", scope: "decidim.budgets.projects.exit_modal") %>
       </h3>
       <p id="dialog-desc-budget-modal">
         <%= t("message", scope: "decidim.budgets.projects.exit_modal") %>
