--- a/decidim-budgets/app/views/decidim/budgets/projects/_budget_excess.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/_budget_excess.html.erb
@@ -7,6 +7,9 @@
     <p id="dialog-desc-budget-excess"><%= current_order.projects_rule? ? t(".projects_excess.description") : t(".budget_excess.description") %></p>
   </div>
   <div data-dialog-actions>
-    <button data-dialog-close="budget-excess" class="button button__sm md:button__lg button__secondary"><%= t(".ok") %></button>
+    <button data-dialog-close="budget-excess" class="button button__sm md:button__lg button__secondary">
+      <%= t(".ok") %>
+      <%= t("ok", scope: "decidim.budgets.projects.budget_excess") %>
+    </button>
   </div>
 <% end %>
