--- a/decidim-meetings/app/views/decidim/meetings/versions/show.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/versions/show.html.erb
@@ -7,7 +7,9 @@
   ) %>
 <% end %>
 
-<%= render layout: "layouts/decidim/shared/layout_item", locals: { back_path: meetings_path, prev_path: "", next_path: "" } do %>
+<% nav_paths = nav_indexes(versioned_resource, params[:id]).transform_values { |index| url_for(action: :show, id: index) } %>
+
+<%= render layout: "layouts/decidim/shared/layout_item", locals: { back_path: meetings_path }.merge(nav_paths) do %>
   <%= cell(
     "decidim/version",
     current_version,
