Fix back path on a version of a meeting to return to the meeting instead of index of meeetings

--- a/decidim-meetings/app/views/decidim/meetings/versions/show.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/versions/show.html.erb
@@ -9,7 +9,7 @@
 
 <% nav_paths = nav_indexes(versioned_resource, params[:id]).transform_values { |index| url_for(action: :show, id: index) } %>
 
-<%= render layout: "layouts/decidim/shared/layout_item", locals: { back_path: meetings_path }.merge(nav_paths) do %>
+<%= render layout: "layouts/decidim/shared/layout_item", locals: { back_path: meeting_path(versioned_resource) }.merge(nav_paths) do %>
   <%= cell(
     "decidim/version",
     current_version,
