--- a/decidim-budgets/app/views/decidim/budgets/projects/_filters.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/_filters.html.erb
@@ -3,7 +3,7 @@
   <%= link_to budgets_path, class: "mb-8 button button__sm button__text-secondary" do %>
     <%= icon "arrow-left-line" %>
     <span>
-      <%= t("back_to_project", scope: "decidim.budgets.projects.index") %>
+      <%= t("back_to_budgets", scope: "decidim.budgets.projects.index") %>
     </span>
   <% end %>
 
