--- a/decidim-core/app/cells/decidim/redesigned_author/default.erb
+++ b/decidim-core/app/cells/decidim/redesigned_author/default.erb
@@ -1,5 +1,7 @@
 <div class="author" data-author>
-  <%= render :profile %>
+  <div class="author__container">
+    <%= render :profile_inline %>
+  </div>
 
   <% context_actions.each do |action| %>
     <%= render action %>
